app_server: Scan fonts in the looper thread.

This way, the first unlucky application to request the font list
after paths change (or on first app_server startup) will not stall out
while the font list is rebuilt, at least most of the time.

Should fix #17574.